--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
       font-size: 0.9em;
       color: #555;
     }
+    .galeria {
+      margin-top: 1em;
+    }
+    .galeria img {
+      max-width: 90%;
+      margin: 1em auto;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
@@ -70,17 +79,32 @@
   </div>
 
   <div class="contenido" id="contenido">
-    <h2>Valeria celebra sus 15</h2>
-    <div class="detalle">
-      <h3>📅 Fecha:</h3>
-      <p>Sábado, 12 de octubre de 2025</p>
+    <h2>Verónica celebra sus 15</h2>
 
-      <h3>📍 Lugar:</h3>
-      <p>Salón Diamante, Bogotá<br>
+    <div class="galeria">
+      <img src="foto1.jpg" alt="Foto principal">
+    </div>
+
+    <div class="detalle">
+      <h3>📛 Invitado:</h3>
+      <p>Nombre del invitado</p>
+
+      <h3>📅 Fecha y Hora:</h3>
+      <p>Viernes, 09 de agosto de 2025 - 6:30 PM</p>
+
+      <h3>📍 Ubicación:</h3>
+      <p>Finca: La Castalia, Vía Altagracia<br>
          <a href="https://maps.google.com" target="_blank">Ver en el mapa</a></p>
 
-      <h3>👗 Dress code:</h3>
-      <p>Elegante</p>
+      <h3>💌 Nota especial:</h3>
+      <p>Lluvia de sobres</p>
+
+      <h3>👗 Código de vestimenta:</h3>
+      <p>Plateado, negro o blanco</p>
+    </div>
+
+    <div class="galeria">
+      <img src="foto2.jpg" alt="Foto secundaria">
     </div>
 
     <h3>Confirmación de asistencia</h3>
