--- a/index.html
+++ b/index.html
@@ -4,7 +4,108 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Invitación - 15 Años</title>
+  <style><!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Verónica - Mis 15</title>
   <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      background: #fdf7fb;
+      color: #333;
+      text-align: center;
+    }
+    .portada {
+      background: url('foto1.jpg') no-repeat center center/cover;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      text-shadow: 0 0 10px black;
+    }
+    .portada h1 {
+      font-size: 2.5em;
+      margin: 0;
+    }
+    .portada p {
+      font-size: 1.2em;
+    }
+    .contenido {
+      padding: 2em;
+    }
+    .detalle {
+      background: white;
+      margin: 1em auto;
+      padding: 1.5em;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 600px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h2, h3 {
+      margin-bottom: 0.5em;
+    }
+    .galeria img {
+      max-width: 90%;
+      border-radius: 10px;
+      margin: 1em 0;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .botones a {
+      display: inline-block;
+      margin: 1em;
+      padding: 0.75em 1.5em;
+      background-color: #ec38bc;
+      color: white;
+      text-decoration: none;
+      border-radius: 30px;
+      font-weight: bold;
+    }
+    footer {
+      margin: 2em 0 1em;
+      font-size: 0.9em;
+      color: #777;
+    }
+  </style>
+</head>
+<body>
+  <div class="portada">
+    <h1>Mis 15 Años</h1>
+    <p>Verónica</p>
+  </div>
+
+  <div class="contenido">
+    <div class="detalle">
+      <h2>¡Estás invitado!</h2>
+      <p><strong>Invitado:</strong> Nombre del invitado</p>
+      <p><strong>Fecha:</strong> Viernes, 09 de agosto de 2025</p>
+      <p><strong>Hora:</strong> 6:30 PM</p>
+      <p><strong>Lugar:</strong> Finca La Castalia, Vía Altagracia</p>
+      <p><strong>Código de vestimenta:</strong> Plateado, negro o blanco</p>
+      <p><strong>Nota especial:</strong> Lluvia de sobres</p>
+    </div>
+
+    <div class="galeria">
+      <img src="foto2.jpg" alt="Foto secundaria">
+    </div>
+
+    <div class="botones">
+      <a href="https://wa.me/573001234567?text=Hola%2C%20confirmo%20mi%20asistencia%20a%20los%2015%20de%20Ver%C3%B3nica." target="_blank">Confirmar por WhatsApp</a>
+      <a href="https://www.google.com/maps?q=La+Castalia,+V%C3%ADa+Altagracia" target="_blank">Ver ubicación</a>
+    </div>
+
+    <footer>
+      Gracias por acompañarme en este día tan especial.
+    </footer>
+  </div>
+</body>
+</html>
+
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
